# Deez---PackageManger

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: add-wiki-documentation.md  write-api-function.md
Deez/: CMakeLists.txt  Deez.cpp  Deez.h
